src/test/ui/block-result/block-must-not-have-result-while.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-while.rs:3:9
   |
LL |         true
   |         ^^^^ expected (), found bool
   |
   = note: expected type `()`
              found type `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
