src/test/ui/block-result/block-must-not-have-result-while.rs
fn main() {
    while true {
        true //~  ERROR mismatched types
             //~| expected type `()`
             //~| found type `bool`
             //~| expected (), found bool
    }
}
